src/objects/EFDataSet__c.object
<CustomObject>
    <fields>
        <fullName>DataFilter__c</fullName>
        <label>Data Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EFCell__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EF Cell</label>
        <referenceTo>EFCell__c</referenceTo>
        <relationshipLabel>EF Data Sets</relationshipLabel>
        <relationshipName>EFDataSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EF Template</label>
        <referenceTo>EFTemplate__c</referenceTo>
        <relationshipLabel>EF Data Sets</relationshipLabel>
        <relationshipName>EFDataSets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupingLevel1__c</fullName>
        <label>Grouping Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupingLevel2__c</fullName>
        <label>Grouping Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalOnTop__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Total on Top</label>
        <type>Checkbox</type>
    </fields>
    <label>EF Data Set</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>